--- a/作业第二题/作业第二题.vcxproj.filters
+++ b/作业第二题/作业第二题.vcxproj.filters
@@ -15,7 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="作业第一题.c">
+    <ClInclude Include="pch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="作业第二题.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
